tests/run_pass/effects_basic.iz
forge write() !io {
}

forge save() !io {
    write()
}

forge main() !io {
    save()
}
