tests/compile_fail/effects_violation.iz
forge read() !io {
}

forge pure_func() {
    read()
}
